Journalisation des événements dans des salons Discord (#9)
* Ajout début politique de conception

* Ajout d'une hashmap pour mémoriser les messages envoyés

* Ajout de la documentation de JDA

* Déclaration d'une classe représentant les messages

* Ajout Listener pour la réception des messages

* Début intégration logging

* Ajout paramètre vscode

* Ajout de l'intégration des logs audio (console uniquement pour l'instant)

* Ajout de LogSender pour l'envoi de logs dans un salon Discord

* Ajout de la gestion des logs de connexion et déconnexion dans les canaux vocaux

* Ajout de la gestion des canaux de logs dans la configuration

# Conflicts:
#	src/main/java/fr/umontpellier/iut/discordbot/config/ConfigStructure.java

* Ajout de la validation de la configuration des canaux de logs

* Ajout de la date et heure lors des connexions et déconnexions vocales

* Ajout de la méthode getChannels pour récupérer les canaux de logs

* Journalisation des suppressions de messages et des changements de salon vocal

- Log des messages supprimés (contenu en cache ou message non trouvé)
- Ajout de l'intent MESSAGE_CONTENT pour lire le contenu des messages
- Cache limité aux 10 000 derniers messages (BoundedCache), thread-safe
- Log des déplacements entre salons vocaux
- Aucune mention/ping dans les messages de log

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

---------

Co-authored-by: Jordi-R66 <66806189+Jordi-R66@users.noreply.github.com>
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>