@@ -4,9 +4,13 @@ import fr.umontpellier.iut.discordbot.commands.CommandManager;
 import fr.umontpellier.iut.discordbot.config.ConfigLoader;
 import fr.umontpellier.iut.discordbot.database.RepositoryFactory;
 import fr.umontpellier.iut.discordbot.events.EventManager;
+import fr.umontpellier.iut.discordbot.lib.BoundedCache;
+import fr.umontpellier.iut.discordbot.lib.CachedMessage;
+import fr.umontpellier.iut.discordbot.services.LogSender;
 import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.JDABuilder;
 import net.dv8tion.jda.api.requests.GatewayIntent;
+import net.dv8tion.jda.api.utils.cache.CacheFlag;
 
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
@@ -14,9 +18,12 @@ import org.slf4j.LoggerFactory;
 
 import java.sql.SQLException;
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 public class Bot implements Runnable {
 	private static final Logger logger = LoggerFactory.getLogger(Bot.class);
+	private static final int MAX_CACHED_MESSAGES = 10_000;
 
 	@NotNull
 	private final ConfigLoader config;
@@ -28,11 +35,18 @@ public class Bot implements Runnable {
 	private final EventManager events;
 	private JDA jda;
 
+	private final LogSender logSender;
+
+	@NotNull
+	private final Map<String, CachedMessage> cachedMessages;
+
 	public Bot() throws SQLException {
 		config = new ConfigLoader();
 		repositories = new RepositoryFactory(this);
 		commands = new CommandManager(this);
 		events = new EventManager(this);
+		cachedMessages = Collections.synchronizedMap(new BoundedCache<>(MAX_CACHED_MESSAGES));
+		logSender = new LogSender(this);
 
 		Runtime.getRuntime().addShutdownHook(new Thread(() -> {
 			try {
@@ -66,13 +80,21 @@ public class Bot implements Runnable {
 		return jda;
 	}
 
+	@NotNull
+	public Map<String, CachedMessage> getCachedMessages() {
+		return cachedMessages;
+	}
+
+	public LogSender getLogSender() {
+		return logSender;
+	}
+
 	@Override
 	public void run() {
-		JDABuilder builder = JDABuilder.createLight(config.get().getToken(), Collections.emptyList());
-		builder.createDefault(getConfig().get().getToken());
-		builder.enableIntents(GatewayIntent.GUILD_MEMBERS);
-
-		this.jda = builder.build();
+		// Les commandes sont enregistrées dans ReadyEventListener
+		this.jda = JDABuilder.createLight(config.get().getToken(), List.of(GatewayIntent.GUILD_VOICE_STATES, GatewayIntent.GUILD_MESSAGES, GatewayIntent.MESSAGE_CONTENT, GatewayIntent.GUILD_MEMBERS))
+				.enableCache(CacheFlag.VOICE_STATE)
+				.build();
 
 		events.registerEvents();
 	}
